Completion of Model Training Code

--- a/notebook/Price_Prediction.ipynb
+++ b/notebook/Price_Prediction.ipynb
@@ -4139,7 +4139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "id": "79388c7e-4bdd-4133-baaa-b397245e0f4e",
    "metadata": {},
    "outputs": [],
@@ -4166,7 +4166,7 @@
     "            }\n",
     "        }\n",
     "    }\n",
-    "    scores = []\n",
+    "    scores = {}\n",
     "    cv = ShuffleSplit(n_splits=5,test_size=0.2,random_state=0)\n",
     "    for algo_name , config in algos.items():\n",
     "        gs = GridSearchCV(config[\"model\"], config[\"params\"],cv = cv, return_train_score=False)\n",
@@ -4494,7 +4494,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
